fix bug "Portrait videos display body background-color during playback"

The video recording in Android has violet the assumption of
SharedQuadState which states that the union of DrawQuads in a given
SharedQuadState is defined in |ShareQuadState::quad_layer_rect|.
This bug reveals that the VideoDrawQuad is not contained in its
SharedQuadState.

Bug: 869704

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I158275fbb321de84f7808e82b770d2f0b3cec8bc
Reviewed-on: https://chromium-review.googlesource.com/1184503
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Yi Xu <yiyix@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585214}
Former-commit-id: 13de6cf8cd4f85994a51d551b8df3b3813b77631